--- a/package.json
+++ b/package.json
@@ -6,17 +6,30 @@
   "author": "F0LI4GE <alexandr.shavlokhov@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node src/server/main.ts"
+    "build:client:react": "webpack --config webpack.config.js",
+    "dev:client:react": "webpack serve --config src/clients/react/webpack.config.js",
+    "dev:server": "ts-node src/server/main.ts"
   },
   "devDependencies": {
+    "@types/react": "^17.0.22",
+    "@types/react-dom": "^17.0.9",
+    "@types/webpack": "^5.28.0",
+    "html-webpack-plugin": "^5.3.2",
+    "ts-loader": "^9.2.6",
     "ts-node": "^10.2.1",
-    "typescript": "^4.4.3"
+    "typescript": "^4.4.3",
+    "webpack": "^5.53.0",
+    "webpack-cli": "^4.8.0",
+    "webpack-dev-server": "^4.2.1"
   },
   "dependencies": {
     "@types/express": "^4.17.13",
+    "axios": "^0.21.4",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "mongoose": "^6.0.7"
+    "mongoose": "^6.0.7",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   }
 }
