--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@types/react": "^17.0.22",
     "@types/react-dom": "^17.0.9",
     "@types/webpack": "^5.28.0",
+    "css-loader": "^6.3.0",
     "html-webpack-plugin": "^5.3.2",
+    "style-loader": "^3.2.1",
     "ts-loader": "^9.2.6",
     "ts-node": "^10.2.1",
     "typescript": "^4.4.3",
